# DiaGerdaCenter

./: .sample.env  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
config/: settings.py  urls.py
diagerda/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
diagerda/migrations/: 0001_initial.py  0002_initial.py  0002_remove_speciality_doctors.py  0002_speciality_icon_alter_doctor_speciality.py  0003_alter_appointment_user.py  0003_remove_doctor_speciality_doctor_speciality.py  0004_alter_speciality_options_speciality_description.py  0005_speciality_doctors.py  0006_alter_doctor_speciality_alter_speciality_doctors.py
diagerda/templates/diagerda/: about.html  appointments.html  appointments_archive.html  base.html  doctors.html  index.html  speciality.html  user_appointments.html
media/person/: Без_названия.jfif
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_telegram.py  0002_alter_user_phone_alter_user_telegram.py
users/templates/users/: email_confirmation_failed.html  profile.html  regenerate_password.html  registration_confirmed.html  registration_sent_done.html  user_form.html
