[tool.poetry]
name = "diagerda"
version = "0.1.0"
description = ""
authors = ["Norilka <NorilkaRus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.22.2"
pytils = "^0.4.1"
django-crispy-forms = "^2.1"
pytz = "^2024.1"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
